# indra_agent

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile  prebuild.sh  startup.sh
src/indra_agent/mcp_server/: __init__.py  __main__.py  autoclient_tools.py  cache.py  mappings.py  query_execution.py  registry.py  server.py
src/indra_agent/mcp_server/templates/: landing_page.html
tests/: __init__.py  conftest.py
tests/mcp_server/: test_column_names_integration.py  test_cypher_execution.py  test_exploratory_workflows.py  test_gateway_tools.py  test_mcp_integration.py  test_schema_discovery.py  test_validation.py
